--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,8 @@
 [submodule "pifuhd"]
 	path = pifuhd
 	url = https://github.com/facebookresearch/pifuhd.git
+	ignore = dirty
 [submodule "lightweight-human-pose-estimation.pytorch"]
 	path = lightweight-human-pose-estimation.pytorch
 	url = https://github.com/Daniil-Osokin/lightweight-human-pose-estimation.pytorch.git
+	ignore = dirty
